Fixed body scrollbar appearing in fullscreen

--- a/src/core/quartersbrief.scss
+++ b/src/core/quartersbrief.scss
@@ -19,14 +19,15 @@ $fa-font-path: 'font';
 }
 
 $textcolor: midnightblue;
+$padding-horizontal: 20pt;
+$padding-vertical: 10pt;
+
+@debug $padding-horizontal;
 
 :root {
 	scroll-behavior: smooth;
 }
 
-:fullscreen {
-	padding: 1ex 1ch;
-}
 ::backdrop {
 	background-color: white;
 }
@@ -39,7 +40,7 @@ body {
 	// Override browser default:
 	margin: 0; 
 	display: flex;
-	flex-direction:column;
+	flex-direction: column;
 	height: 100vh;
 }
 
@@ -52,6 +53,8 @@ header {
 	display: flex;
 	justify-content: space-between;
 	flex: 0 0 fit-content;
+
+	margin: $padding-vertical $padding-horizontal; // Since font-size is 200%, need to halve 
 
 	#fullscreen {
 		cursor: pointer;
@@ -86,12 +89,12 @@ header {
 }
 
 #briefing {
-	padding: 1ex 3ch;
+	padding: $padding-vertical $padding-horizontal;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 5% 8%;
+	gap: 5% max(4ch, 4%);
 	overflow-y: scroll;
-	scroll-snap-type: y proximity;
+	scroll-snap-type: y mandatory;
 
 	flex: 1;
 }
